[package]
name = "duckdb_geoip_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "duckdb_geoip_rs"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.4.1", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.1", features = ["loadable-extension"] }
maxminddb = { version = "0.26.0", features = ["mmap"] }
once_cell = "1.21.3"
